# rearguard

./: .gitignore  PROBABILITY_MODEL.md  README.md
docs/: CAPACITY_TEST_REPORT_2026-07-19.md  COMMERCIAL_READINESS_REVIEW_2026-07-20.md  DEVELOPER_PLATFORM.md  LOAD_TEST_REPORT_2026-07-18.md  SYSTEM_REVIEW_2026-07-19.md  THIRD_PARTY_NOTICES.md  TRAFFIC_GEO_MAP.md
realguard-server-main/: README.md
reports/: watermark-benchmark-2026-07-21-retrieval-final.json  watermark-retrieval-benchmark-2026-07-21.md
scripts/: benchmark_watermark_lab.py  check_deploy_status.sh  deploy_common.sh  deploy_converge.sh  (+5 more)
v2-agent/backend/: .env.example  Dockerfile  THIRD_PARTY_NOTICES.md  pyproject.toml
v2-agent/backend/app/: __init__.py  capture_evidence.py  detector.py  document_utils.py  evidence_manifest_v2.py  evidence_probability.py  forensics.py  image_formats.py  main.py  metadata.py  pdf_report.py  privacy_erasure_ledger.py  provenance.py  provenance_precheck.py  reporting.py  storage.py  synthid_detector.py  unified_forensics.py  verdict_labels.py  visible_watermark_detector.py  watermark_verdict.py  watermark_yolo.py
v2-agent/backend/tests/: conftest.py  test_api_protection.py  test_capture_evidence.py  test_document_support.py  test_evidence_manifest_v2.py  test_evidence_probability.py  test_image_preview.py  test_privacy_erasure_ledger.py  test_privacy_erasure_replay.py  test_provenance_precheck.py  test_storage_history_deletion.py  test_storage_watermark_reuse.py  test_synthid_detector.py  test_verdict_labels.py  test_watermark_verdict.py  test_watermark_yolo.py
(+281 files in other folders)
