[project]
name = "lingjian-backend"
version = "0.1.0"
description = "灵鉴 AI 鉴伪智能体 - Mock 检测后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "matplotlib>=3.7",
    "c2pa-python>=0.32.6",
]

[tool.uv]
package = false
