[project]
name = "huijian-backend"
version = "0.1.0"
description = "慧鉴 AI 鉴伪工作台后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "matplotlib>=3.7",
    "c2pa-python>=0.32.6",
    "opencv-python-headless>=4.9",
    "scipy>=1.11",
    "PyWavelets>=1.5",
    "scikit-learn>=1.4",
]

[tool.uv]
package = false
